--- a/index.html
+++ b/index.html
@@ -31,16 +31,26 @@
     </header> 
 
     <main><!-- app-main -->
-        <div class="card-container">
+        <div class="card_container">
             <div class="product">
-                <img src="./assets/img/1.webp" alt="">
-                <img src="./assets/img/2.webp" alt="">
-                <img src="./assets/img/3.webp" alt="">
-                <img src="./assets/img/4.webp" alt="">
-                <img src="./assets/img/5.webp" alt="">
-                <img src="./assets/img/6.webp" alt="">
+                <img class="small" src="./assets/img/1.webp" alt="">
             </div>
-
+            <div class="product">
+                <img class="small" src="./assets/img/2.webp" alt="">
+            </div>
+            <div class="product">
+                <img class="small" src="./assets/img/3.webp" alt="">
+            </div>
+            <div class="product">
+                <img class="small" src="./assets/img/4.webp" alt="">
+            </div>
+            <div class="product">
+                <img class="small" src="./assets/img/5.webp" alt="">
+            </div>
+            <div class="product">
+                <img class="small" src="./assets/img/6.webp" alt="">
+            </div>
+                
 
         </div>
 
