--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="card_container">
             <div class="product">
                 <img class="small" src="./assets/img/1.webp" alt="">
+                <div class="discount">-80%</div>
             </div>
             <div class="product">
                 <img class="small" src="./assets/img/2.webp" alt="">
