--- a/index.html
+++ b/index.html
@@ -38,18 +38,23 @@
             </div>
             <div class="product">
                 <img class="small" src="./assets/img/2.webp" alt="">
+                <div class="discount">-80%</div>
             </div>
             <div class="product">
                 <img class="small" src="./assets/img/3.webp" alt="">
+                <div class="discount">-80%</div>
             </div>
             <div class="product">
                 <img class="small" src="./assets/img/4.webp" alt="">
+                <div class="discount">-80%</div>
             </div>
             <div class="product">
                 <img class="small" src="./assets/img/5.webp" alt="">
+                <div class="discount">-80%</div>
             </div>
             <div class="product">
                 <img class="small" src="./assets/img/6.webp" alt="">
+                <div class="discount">-80%</div>
             </div>
                 
 
