fix discount tab

--- a/index.html
+++ b/index.html
@@ -33,28 +33,37 @@
     <main><!-- app-main -->
         <div class="card_container">
             <div class="product">
+                <i class="fa-solid fa-heart like"></i>
                 <img class="small" src="./assets/img/1.webp" alt="">
                 <div class="discount">-80%</div>
+                <div class="sust">Sostenibiltà</div>
             </div>
             <div class="product">
+                <i class="fa-solid fa-heart like"></i>
                 <img class="small" src="./assets/img/2.webp" alt="">
                 <div class="discount">-80%</div>
             </div>
             <div class="product">
+                <i class="fa-solid fa-heart like"></i>
                 <img class="small" src="./assets/img/3.webp" alt="">
                 <div class="discount">-80%</div>
             </div>
             <div class="product">
+                <i class="fa-solid fa-heart like"></i>
                 <img class="small" src="./assets/img/4.webp" alt="">
                 <div class="discount">-80%</div>
+                <div class="sust">Sostenibiltà</div>
             </div>
             <div class="product">
+                <i class="fa-solid fa-heart like"></i>
                 <img class="small" src="./assets/img/5.webp" alt="">
-                <div class="discount">-80%</div>
+
             </div>
             <div class="product">
+                <i class="fa-solid fa-heart like"></i>
                 <img class="small" src="./assets/img/6.webp" alt="">
-                <div class="discount">-80%</div>
+                <div class="sust2">Sostenibiltà</div>
+        
             </div>
                 
 
