--- a/index.html
+++ b/index.html
@@ -74,7 +74,30 @@
 
 
     </main>
-    <footer></footer><!-- app_footer -->
+   
+    <footer><!-- app_footer -->
+        <div class="foot_container text_white">
+             <h4 class="white">Boolando s.r.l</h4>
+              <div class="foot_link space">
+              <a class="a marg_right" href="#">Informazioni legali</a>  
+              <a class="a marg_right" href="#">Informativa sulla privacy</a> 
+              <a class="a marg_right" href="#">Diritto di recesso</a>     
+            </div>
+            <h4 class="white foot_find">Trovaci anche su</h4>
+            <div class="foot_icon">
+                <i class="fa-brands fa-square-x-twitter white"></i>
+                <i class="fa-brands fa-square-facebook white"></i>
+                <i class="fa-brands fa-instagram white"></i>
+                <i class="fa-brands fa-square-pinterest white"></i>
+                <i class="fa-brands fa-youtube white"></i>
+            </div>
+
+
+        </div>
+
+
+
+    </footer>
 
 </body>
 </html>
