fixed header sticky

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
     <header> <!-- app_header -->
         <div class="container">
-            <div div class="gender">
+            <nav div class="gender">
                 <a class="text_white bold" href="#">Donna</a>
                 <a class="text_white bold" href="#">Uomo</a> 
                 <a class="text_white bold" href="#">Bambini</a>
-            </div>
+            </nav>
         
              <div class="logo">
                 <img src="./assets/img/boolean-logo.png" alt="">
             </div>
-            <div class="icons">
+            <nav class="icons">
                 <i class="fa-regular fa-user text_white"></i>
                 <i class="fa-solid fa-heart text_white"></i>
                 <i class="fa-solid fa-bag-shopping text_white"></i> 
-            </div>
+            </nav>
         </div>
 
 
