--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <div class="card_container">
             <div class="product">
                 <i class="fa-solid fa-heart like"></i>
-                <img class="small" src="./assets/img/1.webp" alt="">
+                <img class="img" src="./assets/img/1.webp" alt="">
+                <div class="img_hov_levi_relax"></div>
                 <div class="discount">-80%</div>
                 <div class="sust">Sostenibiltà</div>
                 <div class="brand">Levi's</div>
@@ -44,7 +45,8 @@
             </div>
             <div class="product">
                 <i class="fa-solid fa-heart like"></i>
-                <img class="small" src="./assets/img/2.webp" alt="">
+                <img src="./assets/img/2.webp" alt="">
+                <div class="img_hov_guess_tee"></div>
                 <div class="discount">-80%</div>
                 <div class="brand">Guess</div>
                 <h2 class="model">ROSES TEE</h2>
@@ -53,7 +55,8 @@
             </div>
             <div class="product">
                 <i class="fa-solid fa-heart like"></i>
-                <img class="small" src="./assets/img/3.webp" alt="">
+                <img src="./assets/img/3.webp" alt="">
+                <div class="img_hov_zucchero"></div>
                 <div class="discount">-80%</div>
                 <div class="brand">Come Zucchero Filato</div>
                 <h2 class="model">VOGLIA DI COLORI PASTELLO</h2>
@@ -62,7 +65,8 @@
             </div>
             <div class="product">
                 <i class="fa-solid fa-heart like"></i>
-                <img class="small" src="./assets/img/4.webp" alt="">
+                <img src="./assets/img/4.webp" alt="">
+                <div class="img_hov_levi_tee"></div>
                 <div class="discount">-80%</div>
                 <div class="sust">Sostenibiltà</div>
                 <div class="brand">levi's</div>
@@ -72,7 +76,8 @@
             </div>
             <div class="product">
                 <i class="fa-solid fa-heart like"></i>
-                <img class="small" src="./assets/img/5.webp" alt="">
+                <img src="./assets/img/5.webp" alt="">
+                <div class="img_hov_stripe"></div>
                 <div class="brand">Maya Deluxe</div>
                 <h2 class="model">STRIPE BODICE</h2>
                 <h4 class="price new">99,99€</h4>
@@ -81,7 +86,8 @@
             </div>
             <div class="product">
                 <i class="fa-solid fa-heart like"></i>
-                <img class="small" src="./assets/img/6.webp" alt="">
+                <img src="./assets/img/6.webp" alt="">
+                <div class="img_hov_maglione_esprit"></div>
                 <div class="sust2">Sostenibiltà</div>
                 <div class="brand">Esprit</div>
                 <h2 class="model">MAGLIONE - BLACK</h2>
