fix pic hover (bonus 2)

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="product">
                 <i class="fa-solid fa-heart like"></i>
                 <img src="./assets/img/4.webp" alt="">
-                <div class="img_hov_levi_tee"></div>
+                <div class="img_hov_levis_tee"></div>
                 <div class="discount">-80%</div>
                 <div class="sust">Sostenibiltà</div>
                 <div class="brand">levi's</div>
