--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header> <!-- app_header -->
-        <div class="container">
+        <div class="container_main d_flex justify_between">
             <nav div class="gender">
                 <a class="text_white bold" href="#">Donna</a>
                 <a class="text_white bold" href="#">Uomo</a> 
@@ -21,9 +21,15 @@
                 <img src="./assets/img/boolean-logo.png" alt="">
             </div>
             <nav class="icons">
-                <i class="fa-regular fa-user text_white"></i>
-                <i class="fa-solid fa-heart text_white"></i>
-                <i class="fa-solid fa-bag-shopping text_white"></i> 
+                <a href="#">
+                    <i class="fa-regular fa-user text_white"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-heart text_white"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-bag-shopping text_white"></i> 
+                </a>
             </nav>
         </div>
 
@@ -31,6 +37,7 @@
     </header> 
 
     <main><!-- app-main -->
+        <div class="container_main">
         <div class="card_container">
             <div class="product">
                 <i class="fa-solid fa-heart like"></i>
@@ -99,7 +106,7 @@
 
         </div>
 
-
+    </div>
 
 
 
