--- a/index.html
+++ b/index.html
@@ -113,15 +113,16 @@
     </main>
    
     <footer><!-- app_footer -->
-        <div class="foot_container text_white">
-             <h4 class="white">Boolando s.r.l</h4>
+        <div class="foot_container justify_between text_white">
               <div class="foot_link space">
-              <a class="a marg_right" href="#">Informazioni legali</a>  
-              <a class="a marg_right" href="#">Informativa sulla privacy</a> 
-              <a class="a marg_right" href="#">Diritto di recesso</a>     
+                 <h4 class="white">Boolando s.r.l</h4>
+                 <a class="a marg_right" href="#">Informazioni legali</a>  
+                <a class="a marg_right" href="#">Informativa sulla privacy</a> 
+                <a class="a marg_right" href="#">Diritto di recesso</a>     
             </div>
-            <h4 class="white foot_find">Trovaci anche su</h4>
+            
             <div class="foot_icon">
+                <h4 class="white foot_find">Trovaci anche su</h4>
                 <i class="fa-brands fa-square-x-twitter white"></i>
                 <i class="fa-brands fa-square-facebook white"></i>
                 <i class="fa-brands fa-instagram white"></i>
